load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "cloud_analytics",
    srcs = [
        "cloud_analytics.ts",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:constants",
        "//:interfaces",
        "//event_flushing:browser_event_flushing",
        "//event_flushing:interface",
        "//network:browser_network",
        "//network:interface",
    ],
)
